Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Enhancements]
  - Code was adapted to use newer syntax features.

  [Incompatible Changes]
  - Bumped minimum version of Perl to v5.20.

v0.5.0    2024-06-21 21:19:12+01:00 Europe/London
  [Enhancements]
  - Add option to assign a name to a class.

  [Documentation]
  - Reorganised the class constructor documentation.

  - Clarified about predicates and case sensitivity of values.

v0.4.0    2024-06-20 13:30:56+01:00 Europe/London
  [Enhancements]
  - Use a shared method for MATCH.

  - Added explicit as_string method.

  - All instances of classes have Data::Enum as a parent.

  - Internal code improvements.

  [Documentation]
  - Emphasised that value order does not matter in the SYNOPSIS.

  - Adjusted the wording related to the new predicate prefix option.

  - Clarified that predicates return 0 for false, not an empty string.

  [Other]
  - Added a benchmark script for development.

v0.3.0    2024-06-19 17:31:12+01:00 Europe/London
  [Enhancements]
  - Added the "prefix" constructor option and method.

  [Incompatible Changes]
  - Bumped minimum version of Perl to v5.14.

  [Documentation]
  - Updated copyright year.

  [Tests]
  - Changed the author MANIFEST tests to use a maintained module.

v0.2.7    2023-06-11 14:25:38+01:00 Europe/London
  [Documentation]
  - Document support policy for older Perl versions.

  - Bump copyright year.

v0.2.6    2022-09-22 16:42:59+01:00 Europe/London
 [Enhancements]
  - Add MATCH method to support use with match::simple.

  - Minor code improvements.

v0.2.5    2022-09-21 16:19:29+01:00 Europe/London
 [Enhancements]
  - Minor code improvements.

  - Use () prototype for predicate methods.

v0.2.4    2022-09-20 18:27:04+01:00 Europe/London
 [Documentation]
 - Added CAVEAT about performance.

 - Removed "fast" from the ABSTRACT, since it's not necessarily fast.

v0.2.3    2022-09-04 16:07:55+01:00 Europe/London
 [Documentation]
 - Bumped copyright year.
