@@ -7,6 +7,9 @@ Revision history for {{ $dist->name }}:
   [Incompatible Changes]
   - Bumped minimum version of Perl to v5.20.
 
+  [Tests]
+  - Added author tests for CVEs.
+
 v0.5.0    2024-06-21 21:19:12+01:00 Europe/London
   [Enhancements]
   - Add option to assign a name to a class.
